--- a/css/Home.css
+++ b/css/Home.css
@@ -27,6 +27,26 @@
     font-family: karla;
 }
 
+#blog{
+    text-decoration: none;
+    margin-top: 5%;
+    /* width: 100%; */
+    align-self: flex-end;
+    text-align: end;
+    font-family: karla;
+    font-size: 1.25rem;
+    padding: .5rem 2rem;
+    border: 1px solid var(--MY-GRAY);
+    border-radius: 25px;
+    transition: .3s;
+}
+
+#blog:hover{
+    background-color: var(--MY-GRAY);
+    color: var(--WHITE);
+    
+}
+
 .description{
     color: var(--WHITE);
     font-size: 2.5rem;
@@ -345,6 +365,8 @@ a{
     footer{
         flex-direction: column;
         padding: 1.5rem;
+        height: fit-content;
+        padding-bottom: 5%;
     }
 
     .footer-right{
